<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity"
    android:background="@color/indigo_900">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            style="@style/TextContent.About.Judul"
            android:text="@string/develop_by" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/photo_2" />

        <TextView
            style="@style/TextContent.About.Content"
            android:text="@string/name"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent.About.Content"
            android:text="@string/sulaimaniman6_gmail_com"
            android:layout_marginBottom="32dp"/>

        <TextView
            style="@style/TextContent.About.Judul"
            android:layout_marginBottom="8dp"
            android:text="@string/social_media" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp">

            <ImageButton
                android:id="@+id/img_about_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:src="@drawable/icon_instagram"
                android:contentDescription="@string/instagram" />

            <ImageButton
                android:id="@+id/img_about_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:src="@drawable/icon_linkedin"
                android:contentDescription="@string/linkedin" />

            <ImageButton
                android:id="@+id/img_about_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:src="@drawable/icon_twitter"
                android:contentDescription="@string/twitter" />

            <ImageButton
                android:id="@+id/img_about_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                android:src="@drawable/icon_facebook"
                android:contentDescription="@string/facebook" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>