<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/img_item_logo_game"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/game_logo"
            android:scaleType="centerCrop"
            tools:src="@drawable/logo_dota2" />

        <TextView
            android:id="@+id/tv_item_about_game"
            style="@style/TextContent.Headline"
            android:layout_toEndOf="@id/img_item_logo_game"
            android:text="@string/about_game" />

        <TextView
            android:id="@+id/tv_item_detail_game"
            style="@style/TextContent.Content"
            android:layout_above="@id/layout_button"
            android:layout_below="@id/tv_item_about_game"
            android:layout_toEndOf="@id/img_item_logo_game"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/detail_dummy" />

        <TextView
            android:id="@+id/tv_item_judul_game"
            style="@style/TextContent.Judul"
            android:layout_alignParentBottom="true"
            tools:text="@string/dota" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_item_judul_game"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_logo_game"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_download"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/download"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>